sfdx-source/force-app/main/default/objects/Business_Reference__c/Business_Reference__c.object-meta.xml
<CustomObject>
    <description>LEM-2082 Object used for integration of Business Ids</description>
    <label>Business Reference</label>
    <nameField>
        <label>Business Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>