sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Auto_Create_Business_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Business_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3333: If a Platform Event has been received for the Store Accounts mark this as true</description>
    <label>Auto Create Business Configuration</label>
    <type>Checkbox</type>
</CustomField>