sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-12683</description>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Business References</relationshipLabel>
    <relationshipName>Business_References</relationshipName>
    <type>Lookup</type>
</CustomField>