sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Brand_Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Owner_Segment__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16039: It stores related brand owner&apos;s segment value.</description>
    <formula>TEXT(Brand__r.Brand_Owner__r.Segment__c)</formula>
    <label>Brand Owner Segment</label>
    <type>Text</type>
</CustomField>