sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Brand_Owner_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Brand_Owner_Vertical__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16039: It stores related brand owner&apos;s Primary Vertical value.</description>
    <formula>TEXT(Brand__r.Brand_Owner__r.Primary_Vertical__c)</formula>
    <label>Brand Owner Vertical</label>
    <type>Text</type>
</CustomField>