sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Business_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_Id__c</fullName>
    <description>LEM-2082 Identifies the Business Group ID this Business belongs to.</description>
    <label>Business Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>