sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>LEM-2082 Name of the Business as provisioned in its external source.</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>