sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Business_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Business_Vertical__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-11072: It is used to associate a Business Vertical to the Business Reference.</description>
    <label>Business Vertical</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Business_Vertical__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Vertical__c</referenceTo>
    <relationshipLabel>Business References</relationshipLabel>
    <relationshipName>Business_References</relationshipName>
    <type>Lookup</type>
</CustomField>