sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Business_Vertical_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_Vertical_Details__c</fullName>
    <description>LEM-16231 Sync the Business Vertical Details from Ddmx to Figment</description>
    <formula>IF(Business_Vertical_Identifier__c != null, Text(Business_Vertical__r.Menu_UI_Type__c) + &apos; UI - &apos;+ Business_Vertical__r.Vertical_Name__c + &apos; - &apos; + Business_Vertical__r.Business_Vertical_ID__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Vertical Details</label>
    <type>Text</type>
</CustomField>