sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Business_Vertical_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Vertical_Id__c</fullName>
    <description>LEM-2082 A system determined value referenced in external systems.</description>
    <label>Business Vertical Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>