sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Business_Vertical_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Vertical_Name__c</fullName>
    <description>LEM-15045: Heroku sync: purpose stamp the Business Vertical on the Figment Heroku Account created during Business Reference Sync</description>
    <formula>Business_Vertical__r.Vertical_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Vertical Name</label>
    <type>Text</type>
</CustomField>