sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Created_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_Source_Id__c</fullName>
    <description>LEM-12957 as part of this story we are using this field to store the source Id(opportunity id or contract Id)</description>
    <label>Created Source Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>