sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Created_Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Created_Source_Object__c</fullName>
    <description>LEM-12957 as part of this story this field indicates object type of Created Source Id</description>
    <label>Created Source Object</label>
    <length>12</length>
    <type>Text</type>
</CustomField>