sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Created_Source_Parent_Work_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_Source_Parent_Work_Order_Id__c</fullName>
    <description>LEM-20169: It is used to store Id of the Parent Work Order.</description>
    <label>Created Source Parent Work Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>