sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Default_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Type__c</fullName>
    <description>LEM-2306</description>
    <label>Default Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>COO Graveyard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>