sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Developer_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_ID__c</fullName>
    <description>LEM-2842: Integrations Developer ID field</description>
    <label>Developer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>