sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Drive_with_Mp_Bz_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_with_Mp_Bz_Id__c</fullName>
    <description>LEM-10182: It indicates that the Business Reference record is created/used for &apos;;Drive Withholding&apos; i.e. provisioning will happen with External Id same as &quot;Mp Bz Id&quot;.</description>
    <label>Drive with Mp Bz Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>