sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>LEM-2082 Represents the corresponding record ID in the external source. For example, the Business ID of a record in MDS.</description>
    <label>Business ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>