sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/External_Id_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Source__c</fullName>
    <description>LEM-2082 Identifies the external system or database where the External Id resides.</description>
    <label>External Id Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_Id_Source</valueSetName>
    </valueSet>
</CustomField>