sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message__c</fullName>
    <description>LEM-2082 The message returned from an external system in the latest integration sync. When the Integration Status = Failure, the failure message is captured in this field.</description>
    <label>Integration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>