sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>LEM-2082 The integration status of the record. When set to “Ready for Integration”, the record is automatically pushed to its external source to be created/updated.</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Status</valueSetName>
    </valueSet>
</CustomField>