sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/is_Biz_Group_Id_Link_To_Biz_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>is_Biz_Group_Id_Link_To_Biz_Ref_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-14954 : [SFDC] Business ID/Business Group Automation</description>
    <label>is Biz Group Id Link To Biz Ref Id</label>
    <type>Checkbox</type>
</CustomField>