sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Is_Created_By_SSMO__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_By_SSMO__c</fullName>
    <defaultValue>false</defaultValue>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15138: It is used to identify if Business Reference is created by SSMO fallout.</description>
    <label>Is Created By SSMO</label>
    <type>Checkbox</type>
</CustomField>