sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Last_Completed_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Step__c</fullName>
    <description>LEM-3333:Capture the last completed step completed by mulesoft</description>
    <label>Last Completed Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business and User Created</fullName>
            </value>
            <value>
                <fullName>Business Configuration Created</fullName>
            </value>
            <value>
                <fullName>Drive Withholding Business Request Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>