sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Last_Integration_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Integration_Sync__c</fullName>
    <description>LEM-2082 The date/time this record was last updated in its external source.</description>
    <label>Last Integration Sync</label>
    <type>DateTime</type>
</CustomField>