sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Mastered_In_Figment__c.field-meta.xml
<CustomField>
    <fullName>Mastered_In_Figment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-5346: This field indicates whether EBID has to be mastered in figment or not.</description>
    <label>Mastered In Figment</label>
    <type>Checkbox</type>
</CustomField>