sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Menu_UI_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_UI_Type__c</fullName>
    <description>LEM-2082 Captures the UI associated with the Business.</description>
    <label>Menu UI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Menu_UI</valueSetName>
    </valueSet>
</CustomField>