sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Merchant_Portal_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Portal_Business_ID__c</fullName>
    <description>LEM-2702: Link to the Merchant Portal for the corresponding Mx account.</description>
    <formula>IF(ISBLANK(External_Id__c) ,null, HYPERLINK($CustomMetadata.Static_Configurations__mdt.Merchant_Portal_URL.Configuration_Value__c + External_Id__c, External_Id__c, &quot;_blank&quot;))</formula>
    <inlineHelpText>Link to the Merchant Portal for the corresponding Mx account</inlineHelpText>
    <label>Merchant Portal (Business ID)</label>
    <type>Text</type>
</CustomField>