sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Mint_Business_Page__c.field-meta.xml
<CustomField>
    <fullName>Mint_Business_Page__c</fullName>
    <description>LEM-2702: Business ID and link to the Mint business page for Marketplace.</description>
    <formula>IF( OR(TEXT(External_Id_Source__c) = $Label.MDS,TEXT(External_Id_Source__c) = $Label.DriveDb) &amp;&amp; NOT(ISBLANK(External_Id__c)), HYPERLINK($CustomMetadata.Static_Configurations__mdt.MINT_Business_Page_URL.Configuration_Value__c + External_Id__c, External_Id__c, &quot;_blank&quot;), null)</formula>
    <inlineHelpText>Business ID and link to the Mint business page</inlineHelpText>
    <label>MINT Business Page</label>
    <type>Text</type>
</CustomField>