sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/MS_Sync_Stage__c.field-meta.xml
<CustomField>
    <fullName>MS_Sync_Stage__c</fullName>
    <description>LEM-3515</description>
    <label>MS Sync Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>