sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Online_Ordering_Business_Page__c.field-meta.xml
<CustomField>
    <fullName>Online_Ordering_Business_Page__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-24847: It is used to store the External ID of the Business and link to the Online Ordering business page.</description>
    <formula>HYPERLINK($CustomMetadata.Static_Configurations__mdt.Online_Ordering_Business_Page_URL.Configuration_Value__c+ External_Id__c ,
    External_Id__c,
    &quot;_blank&quot;
)</formula>
    <inlineHelpText>Business ID and link to the Online Ordering business page</inlineHelpText>
    <label>Online Ordering Business Page</label>
    <type>Text</type>
</CustomField>