sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vertical__c</fullName>
    <description>LEM-2082 Captures the Vertical associated with the Business.</description>
    <label>Primary Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical</valueSetName>
    </valueSet>
</CustomField>