sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Provisioning_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Error_Category__c</fullName>
    <description>LEM-10933: It is used to capture Business Friendly Mapping's "Message Category" in case of the Provisioning integration failure.</description>
    <label>Provisioning Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Do Not Activate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>