sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Provisioning_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Error_Message__c</fullName>
    <description>Created this field to capture the Raw Error/Exception Message from Mulesoft in Provisioning Integration
https://doordash.atlassian.net/browse/LEM-9937</description>
    <label>Provisioning Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>