sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Record_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Source__c</fullName>
    <description>LEM-4282: It is used to store source of the record.</description>
    <label>Record Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Figment</fullName>
            </value>
            <value>
                <fullName>MDS</fullName>
            </value>
            <value>
                <fullName>Drive DB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>