sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Selling_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Selling_Country_Code__c</fullName>
    <description>LEM-14792 Identifies the selling country code.</description>
    <label>Selling Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Codes</valueSetName>
    </valueSet>
</CustomField>