sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/System_Created__c.field-meta.xml
<CustomField>
    <fullName>System_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2082 If the record was created automatically during the onboarding of one or more stores, this field is true. If the record was created manually by a user or data load, this field is false.

Duplication rules and logic are only applied to records that were system created.</description>
    <label>System Created</label>
    <type>Checkbox</type>
</CustomField>