sfdx-source/force-app/main/default/objects/Business_Reference__c/fields/Unified_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Unified_Business_ID__c</fullName>
    <description>LEM-2702: Signifies the backend unified ID tying Marketplace and Drive Store IDs.</description>
    <label>Unified Business ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>