sfdx-source/force-app/main/default/objects/Business_Reference__c/validationRules/Validate_Selling_Country_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Selling_Country_Code</fullName>
    <active>true</active>
    <description>LEM-14792 Validates selling country code must be populated when Menu UI Type is Retail and Business Vertical is Not Null.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Business_Vertical__c)),
 ISPICKVAL( Menu_UI_Type__c , &apos;Retail&apos;),
 ISBLANK(TEXT(Selling_Country_Code__c)),
 ISPICKVAL( External_Id_Source__c , &apos;MDS&apos;)
 )</errorConditionFormula>
    <errorMessage>Selling Country Code is a required attribute for Retail Business Verticals</errorMessage>
</ValidationRule>