sfdx-source/force-app/main/default/objects/Business_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>Default_Type__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>External_Id__c</columns>
    <columns>Business_Vertical__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Business References</label>
</ListView>